# breakthrough

./: CMakeLists.txt  README.md  agent.cpp  agent.h  agentRandom.h  bitboard.cpp  bitboard.h  config.h  default_config.json  epsilonGreedy.cpp  epsilonGreedy.h  game.cpp  game.h  main.cpp  main_sources.txt  mcts.cpp  mcts.h  types.h
arena/: epsilonGreedyvsRandom.cpp  mctsVsAgentGreedy.cpp  mctsVsRandom.cpp
blog/: breakthrough.org  entry1.org  entry2.org
scripts/: bundler.py  main_sources.txt  test_actionsgen_sources.txt
tests/: actions_gen.cpp  do_undo.cpp  mcts_test.cpp  sample_benchmark.cpp  view_bbs.cpp
utils/: clean_data.py  generate-jsontrees.cpp  make_config.py
view/: index.html  webserver.py
view/scripts/: tidytree.js
